Authorization with jwt plus registration

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-export POSTGRESQL_URL=postgres://meetmeup_user:meetmeup@localhost:5432/meetmeup_dev?sslmode=disable
+export DB_URL=postgres://meetmeup_user:meetmeup@localhost:5432/meetmeup_dev?sslmode=disable
 export JWT_SECRET=asecret
